# rfq2vec

./: README.md
rfqfm/: README.md  pyproject.toml  rfq foundation model strategy.md
rfqfm/rfqfm/: __init__.py  config.py  contract.py  corpus.py  data.py  extract.py  features.py  floor.py  model.py  packed.py  probes.py  representation.py  tokenize.py  vocab.py
rfqfm/rfqfm/scripts/: build_corpus.py  generate.py  probe.py  sweep.py  train.py
rfqfm/tests/: conftest.py  test_core.py  test_probes.py  test_representation.py
rfqsim_schema_ext/: README.md
rfqsim_schema_ext/rfqsim/: __init__.py
rfqsim_schema_ext/rfqsim/schema/: __init__.py  backend.py  emission.py  emission_batch.py  enums.py  gpurand.py  intensity.py  manifest.py  pipeline.py  population.py  production.py  projection.py  state.py  tables.py  vocab.py  writer.py
rfqsim_schema_ext/tests/: _toy.py  conftest.py  test_leakage.py  test_pipeline.py  test_production.py  test_schemas.py  test_state.py  test_vocab.py  test_writer.py
